<resources>
    <string name="app_name">The otter\'s treasures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_offers">Offers</string>
    <string name="main_activity_gift_of_month">Month\'s gift</string>
    <string name="main_activity_my_coupons">My coupons</string>
    <string name="main_activity_my_account">My account</string>
    <string name="home_fragment_title">Geneva</string>
    <string name="home_fragment_description">Système HiFi / meuble TV XXL</string>
    <string name="offer_fragment_i_want_it">I want it</string>
    <string name="sign_up_fragment_username">Username</string>
    <string name="sign_up_fragment_email">Email</string>
    <string name="sign_up_fragment_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_2">Password is not good</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_login">Login</string>
    <string name="login_activity_or">Or sign up</string>
    <string name="login_activity_error_when_signin">Error when signin =(</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="main_activity_logout">Logout</string>
    <string name="main_activity_error_while_loggout">Error when logout</string>
    <string name="login_activity_error_when_login">Error when login</string>
    <string name="main_activity_my_keys">My keys</string>
    <string name="main_activity_tresures">Treasures</string>
    <string name="main_activity_treasures">Treasures</string>
    <string name="main_activity_order_send">You won a key !</string>
    <string name="main_activity_error_while_sending">Error while sending order</string>
    <string name="bronzeKey">bronze keys</string>
    <string name="platineKey">platine keys</string>
    <string name="keysNote">Purchase some offers to get more keys !</string>
    <string name="no_golden_keys">0 golden key</string>
    <string name="no_silver_key">0 silver key</string>
    <string name="no_bronze_key">0 bronze key</string>
    <string name="silverKey">silver keys</string>
    <string name="goldKey">gold keys</string>
    <string name="congratulations">Congratulations !</string>
    <string name="you_opened_a_chest">You opened a chest !</string>
    <string name="you_won">You won :</string>
    <string name="main_activity_winning_treasures">Winning treasures</string>
    <string name="main_activity_home">Home</string>
    <string name="earned_by">earned by</string>
    <string name="draw_in_any_sec">draw in any sec !</string>
    <string name="welcomeTitle">Welcome pirate !</string>
    <string name="welcomeMessage">You can won incredible tresure ! When you buy offers, you earn bronze, silver, or gold keys. With this keys you can open chests and win all kind of crazy treasure !</string>
    <string name="buy_offer">buy offer now</string>
    <string name="error_title">Oops...</string>
    <string name="error_message">Something get wrong...</string>
    <string name="years">years</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
</resources>
