<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_offers"
    tools:context="ch.geomatic.swissgeolocalmember.Fragment.HomeFragment">

    <TextView
        android:id="@+id/titleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_below="@id/titleHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/i_want_it_button"
        android:text="@string/offer_fragment_i_want_it"
        android:onClick="iWantItClickButton"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
