<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background3"
    tools:ignore="MissingPrefix"
    tools:context="xero88.ch.qoqa.Fragment.WinnerFragment">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="25dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="50dp"
        android:background="@drawable/parchemin1">


        <ImageView
            android:id="@+id/captainOtter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/captain"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_below="@id/captainOtter"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/welcomeTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_below="@id/welcomeTitle"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/welcomeMessage"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>


        <Button
            android:id="@+id/buyOfferNowButton"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/buy_offer"
            android:layout_marginTop="10dp"
            android:layout_below="@id/welcomeMessage"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</RelativeLayout>
