<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="MissingPrefix"
    tools:context="ch.xero88.qoqa.Fragment.CouponFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_island"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:alpha="0.75"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="25dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="50dp"
        android:background="@drawable/background_paper">

        <ProgressBar
            android:id="@+id/couponProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/goldKeyImage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/gold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/goldKeyCount"
            android:layout_toRightOf="@id/goldKeyImage"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/no_golden_keys"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/silverKeysImage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/goldKeyImage"
            android:src="@drawable/silver"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/silverKeysCount"
            android:layout_toRightOf="@id/silverKeysImage"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/goldKeyImage"
            android:text="@string/no_silver_key"/>


        <ImageView
            android:id="@+id/bronzeKeysImage"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@id/silverKeysImage"
            android:src="@drawable/bronze"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/bronzeKeysCount"
            android:layout_toRightOf="@id/silverKeysImage"
            fontPath="fonts/Primitive.ttf"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/silverKeysImage"
            android:text="@string/no_bronze_key"/>

        <TextView
            android:id="@+id/noteKeys"
            fontPath="fonts/Primitive.ttf"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_below="@id/bronzeKeysCount"
            android:text="@string/keysNote"/>
    </RelativeLayout>

</FrameLayout>
